--- a/maplibre_gl_web/pubspec.yaml
+++ b/maplibre_gl_web/pubspec.yaml
@@ -19,9 +19,13 @@ dependencies:
   meta: ^1.3.0
   maplibre_gl_platform_interface:
     git:
-      url: https://github.com/maplibre/flutter-maplibre-gl.git
+      url: https://github.com/Geomatys/flutter-maplibre-gl.git
       path: maplibre_gl_platform_interface
-      ref: main
+      ref: geomatys
+  maplibre_gl_dart:
+    git:
+      url: https://github.com/m0nac0/maplibre-gl-dart.git
+      ref: 0.2.2
   image: ^4.0.17
 
 dependency_overrides:
